Add demos script